新增一种仿in图片轮播动画样式动画，未完成

--- a/GJJPhotoBrowser/GJJPhotoBrowser/photoUrls.plist
+++ b/GJJPhotoBrowser/GJJPhotoBrowser/photoUrls.plist
@@ -17,22 +17,14 @@
 	<array>
 		<string>http://e.hiphotos.baidu.com/image/h%3D200/sign=dbfa0e2f7a1ed21b66c929e59d6fddae/b151f8198618367a86dae00029738bd4b21ce598.jpg</string>
 		<string>http://h.hiphotos.baidu.com/image/h%3D200/sign=e8dfbdc69a16fdfac76cc1ee848e8cea/738b4710b912c8fc8cfeb020fb039245d78821c9.jpg</string>
-		<string>http://img14.poco.cn/mypoco/myphoto/20130131/22/17323571520130131221457027_640.jpg</string>
-		<string>http://img.taopic.com/uploads/allimg/110906/1382-110Z611025585.jpg</string>
+		<string>http://img3.imgtn.bdimg.com/it/u=1519095430,2307521081&amp;fm=21&amp;gp=0.jpg</string>
+		<string>http://c.hiphotos.baidu.com/image/h%3D200/sign=89c6743711ce36d3bd0484300af23a24/ae51f3deb48f8c54469d4dc23e292df5e1fe7f95.jpg</string>
 	</array>
 	<array>
 		<string>http://e.hiphotos.baidu.com/image/h%3D200/sign=dbfa0e2f7a1ed21b66c929e59d6fddae/b151f8198618367a86dae00029738bd4b21ce598.jpg</string>
 		<string>http://h.hiphotos.baidu.com/image/h%3D200/sign=e8dfbdc69a16fdfac76cc1ee848e8cea/738b4710b912c8fc8cfeb020fb039245d78821c9.jpg</string>
 		<string>http://img14.poco.cn/mypoco/myphoto/20130131/22/17323571520130131221457027_640.jpg</string>
-		<string>http://img.taopic.com/uploads/allimg/110906/1382-110Z611025585.jpg</string>
-		<string>http://g.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=c1a34195cefcc3ceb495c137a775fabe/37d12f2eb9389b50c9712de58335e5dde6116eff.jpg</string>
-	</array>
-	<array>
-		<string>http://e.hiphotos.baidu.com/image/h%3D200/sign=dbfa0e2f7a1ed21b66c929e59d6fddae/b151f8198618367a86dae00029738bd4b21ce598.jpg</string>
-		<string>http://h.hiphotos.baidu.com/image/h%3D200/sign=e8dfbdc69a16fdfac76cc1ee848e8cea/738b4710b912c8fc8cfeb020fb039245d78821c9.jpg</string>
-		<string>http://img14.poco.cn/mypoco/myphoto/20130131/22/17323571520130131221457027_640.jpg</string>
-		<string>http://img.taopic.com/uploads/allimg/110906/1382-110Z611025585.jpg</string>
-		<string>http://g.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=c1a34195cefcc3ceb495c137a775fabe/37d12f2eb9389b50c9712de58335e5dde6116eff.jpg</string>
+		<string>http://g.hiphotos.baidu.com/image/pic/item/63d0f703918fa0ec668eece0229759ee3c6ddb96.jpg</string>
 		<string>http://g.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=c1a34195cefcc3ceb495c137a775fabe/37d12f2eb9389b50c9712de58335e5dde6116eff.jpg</string>
 	</array>
 	<array>
@@ -40,30 +32,38 @@
 		<string>http://h.hiphotos.baidu.com/image/h%3D200/sign=e8dfbdc69a16fdfac76cc1ee848e8cea/738b4710b912c8fc8cfeb020fb039245d78821c9.jpg</string>
 		<string>http://img14.poco.cn/mypoco/myphoto/20130131/22/17323571520130131221457027_640.jpg</string>
 		<string>http://img.taopic.com/uploads/allimg/110906/1382-110Z611025585.jpg</string>
-		<string>http://g.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=c1a34195cefcc3ceb495c137a775fabe/37d12f2eb9389b50c9712de58335e5dde6116eff.jpg</string>
-		<string>http://g.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=c1a34195cefcc3ceb495c137a775fabe/37d12f2eb9389b50c9712de58335e5dde6116eff.jpg</string>
-		<string>http://g.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=c1a34195cefcc3ceb495c137a775fabe/37d12f2eb9389b50c9712de58335e5dde6116eff.jpg</string>
-	</array>
-	<array>
-		<string>http://e.hiphotos.baidu.com/image/h%3D200/sign=dbfa0e2f7a1ed21b66c929e59d6fddae/b151f8198618367a86dae00029738bd4b21ce598.jpg</string>
-		<string>http://h.hiphotos.baidu.com/image/h%3D200/sign=e8dfbdc69a16fdfac76cc1ee848e8cea/738b4710b912c8fc8cfeb020fb039245d78821c9.jpg</string>
-		<string>http://img14.poco.cn/mypoco/myphoto/20130131/22/17323571520130131221457027_640.jpg</string>
-		<string>http://img14.poco.cn/mypoco/myphoto/20130131/22/17323571520130131221457027_640.jpg</string>
-		<string>http://img.taopic.com/uploads/allimg/110906/1382-110Z611025585.jpg</string>
-		<string>http://g.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=c1a34195cefcc3ceb495c137a775fabe/37d12f2eb9389b50c9712de58335e5dde6116eff.jpg</string>
-		<string>http://g.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=c1a34195cefcc3ceb495c137a775fabe/37d12f2eb9389b50c9712de58335e5dde6116eff.jpg</string>
+		<string>http://g.hiphotos.baidu.com/image/h%3D200/sign=1870ec20a96eddc439e7b3fb09dab6a2/dbb44aed2e738bd4a59870f4a58b87d6267ff9be.jpg</string>
 		<string>http://g.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=c1a34195cefcc3ceb495c137a775fabe/37d12f2eb9389b50c9712de58335e5dde6116eff.jpg</string>
 	</array>
 	<array>
 		<string>http://e.hiphotos.baidu.com/image/h%3D200/sign=dbfa0e2f7a1ed21b66c929e59d6fddae/b151f8198618367a86dae00029738bd4b21ce598.jpg</string>
 		<string>http://h.hiphotos.baidu.com/image/h%3D200/sign=e8dfbdc69a16fdfac76cc1ee848e8cea/738b4710b912c8fc8cfeb020fb039245d78821c9.jpg</string>
 		<string>http://img14.poco.cn/mypoco/myphoto/20130131/22/17323571520130131221457027_640.jpg</string>
-		<string>http://img14.poco.cn/mypoco/myphoto/20130131/22/17323571520130131221457027_640.jpg</string>
+		<string>http://img.taopic.com/uploads/allimg/110906/1382-110Z611025585.jpg</string>
+		<string>http://f.hiphotos.baidu.com/image/pic/item/bf096b63f6246b6041b770b1eff81a4c500fa2be.jpg</string>
+		<string>http://g.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=c1a34195cefcc3ceb495c137a775fabe/37d12f2eb9389b50c9712de58335e5dde6116eff.jpg</string>
+		<string>http://e.hiphotos.baidu.com/image/h%3D200/sign=117352e14110b912a0c1f1fef3fcfcb5/8326cffc1e178a8265636afaf003738da977e809.jpg</string>
+	</array>
+	<array>
+		<string>http://e.hiphotos.baidu.com/image/h%3D200/sign=dbfa0e2f7a1ed21b66c929e59d6fddae/b151f8198618367a86dae00029738bd4b21ce598.jpg</string>
+		<string>http://h.hiphotos.baidu.com/image/h%3D200/sign=e8dfbdc69a16fdfac76cc1ee848e8cea/738b4710b912c8fc8cfeb020fb039245d78821c9.jpg</string>
+		<string>http://images.ali213.net/picfile/pic/2014/06/16/927_20140616161357941.jpg</string>
 		<string>http://img14.poco.cn/mypoco/myphoto/20130131/22/17323571520130131221457027_640.jpg</string>
 		<string>http://img.taopic.com/uploads/allimg/110906/1382-110Z611025585.jpg</string>
 		<string>http://g.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=c1a34195cefcc3ceb495c137a775fabe/37d12f2eb9389b50c9712de58335e5dde6116eff.jpg</string>
+		<string>http://www.sj88.com/attachments/201501/09/13/3w9hx0wp7.jpg</string>
+		<string>http://g.hiphotos.baidu.com/image/pic/item/03087bf40ad162d9ec74553b14dfa9ec8a13cd7a.jpg</string>
+	</array>
+	<array>
+		<string>http://e.hiphotos.baidu.com/image/h%3D200/sign=dbfa0e2f7a1ed21b66c929e59d6fddae/b151f8198618367a86dae00029738bd4b21ce598.jpg</string>
+		<string>http://h.hiphotos.baidu.com/image/h%3D200/sign=e8dfbdc69a16fdfac76cc1ee848e8cea/738b4710b912c8fc8cfeb020fb039245d78821c9.jpg</string>
+		<string>http://img2.imgtn.bdimg.com/it/u=3305623529,2077952107&amp;fm=21&amp;gp=0.jpg</string>
+		<string>http://img14.poco.cn/mypoco/myphoto/20130131/22/17323571520130131221457027_640.jpg</string>
+		<string>http://pic.yesky.com/uploadImages/2014/356/16/NE6VQV1X7Y63.jpg</string>
+		<string>http://img.taopic.com/uploads/allimg/110906/1382-110Z611025585.jpg</string>
 		<string>http://g.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=c1a34195cefcc3ceb495c137a775fabe/37d12f2eb9389b50c9712de58335e5dde6116eff.jpg</string>
-		<string>http://g.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=c1a34195cefcc3ceb495c137a775fabe/37d12f2eb9389b50c9712de58335e5dde6116eff.jpg</string>
+		<string>http://a4.att.hudong.com/82/26/01300534333891140895265774336_950.jpg</string>
+		<string>http://img1.imgtn.bdimg.com/it/u=3580564197,1565978774&amp;fm=21&amp;gp=0.jpg</string>
 	</array>
 </array>
 </plist>
